added section possobilities . Corporate page

--- a/addresses-card.html
+++ b/addresses-card.html
@@ -32,7 +32,7 @@
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link" href="#!">
+					<a class="header-top-menu__link" href="./corporate.html">
 						Корпоративным клиентам
 					</a>
 				</li>
