create page offers(special offers). added section offer. Correcting header menu links indents.

--- a/addresses-card.html
+++ b/addresses-card.html
@@ -37,7 +37,7 @@
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link header-top-menu__link--color-green" href="#!">
+					<a class="header-top-menu__link header-top-menu__link--color-green" href="./offers.html">
 						Спецпредложения
 					</a>
 				</li>
@@ -70,7 +70,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link" href="#!">
+								<a class="mobile-menu__link" href="./addresses.html">
 									Адреса
 								</a>
 							</li>
@@ -80,7 +80,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link mobile-menu__link--color-green" href="#!">
+								<a class="mobile-menu__link mobile-menu__link--color-green" href="./offers.html">
 									Спецпредложения
 								</a>
 							</li>
@@ -256,8 +256,9 @@
 								<p
 									onclick="this.firstElementChild.style.display = 'none';this.children[1].classList.remove('visually-hidden');">
 									<span class="svc-contacts__item-text svc-contacts__item-text--underline">Показать</span>
-									<span class="visually-hidden svc-contacts__item-text svc-contacts__item-text--phone-number">+7 (812)
-										385-50-54</span>
+									<span class="visually-hidden svc-contacts__item-text svc-contacts__item-text--phone-number">
+										+7 (812)385-50-54
+									</span>
 								</p>
 							</li>
 
@@ -987,7 +988,7 @@
 
 				<div class="footer__heading-text">
 					<p>
-						Сеть шиномонтажей, автомоек и&nbsp;автосервисов  с&nbsp;качественным обслуживанием в&nbsp;Санкт-Петербурге
+						Сеть шиномонтажей, автомоек и&nbsp;автосервисов с&nbsp;качественным обслуживанием в&nbsp;Санкт-Петербурге
 					</p>
 				</div>
 			</div>
@@ -1019,7 +1020,7 @@
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Cпецпредложения</a>
+						<a class="footer__links-link" href="./offers.html">Cпецпредложения</a>
 					</li>
 
 					<li>
