--- a/addresses.html
+++ b/addresses.html
@@ -32,12 +32,12 @@
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link" ./corporate.htmlef="./corporate../corporate.htmlml">
+					<a class="header-top-menu__link" href="./corporate.html">
 						Корпоративным клиентам
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link header-top-menu__link--color-green" href="#!">
+					<a class="header-top-menu__link header-top-menu__link--color-green" href="./offers.html">
 						Спецпредложения
 					</a>
 				</li>
@@ -70,17 +70,17 @@
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link" href="#!">
+								<a class="mobile-menu__link" href="./addresses.html">
 									Адреса
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link" href="./corporate../corporate.htmlml">
+								<a class="mobile-menu__link" href="./corporate.html">
 									Корпоративным клиентам
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link mobile-menu__link--color-green" href="#!">
+								<a class="mobile-menu__link mobile-menu__link--color-green" href="./offers.html">
 									Спецпредложения
 								</a>
 							</li>
@@ -172,7 +172,6 @@
 			</a>
 		</div>
 	</header>
-
 	<main class="content">
 		<h1 class="visually-hidden">Адреса мастерских 2АТМ</h1>
 
@@ -692,7 +691,7 @@
 
 				<div class="footer__heading-text">
 					<p>
-						Сеть шиномонтажей, автомоек и&nbsp;автосервисов  с&nbsp;качественным обслуживанием в&nbsp;Санкт-Петербурге
+						Сеть шиномонтажей, автомоек и&nbsp;автосервисов с&nbsp;качественным обслуживанием в&nbsp;Санкт-Петербурге
 					</p>
 				</div>
 			</div>
@@ -724,7 +723,7 @@
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Cпецпредложения</a>
+						<a class="footer__links-link" href="./offers.html">Cпецпредложения</a>
 					</li>
 
 					<li>
