--- a/corporate.html
+++ b/corporate.html
@@ -32,12 +32,12 @@
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link" href="#!">
+					<a class="header-top-menu__link" href="./corporate.html">
 						Корпоративным клиентам
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link header-top-menu__link--color-green" href="#!">
+					<a class="header-top-menu__link header-top-menu__link--color-green" href="./offers.html">
 						Спецпредложения
 					</a>
 				</li>
@@ -70,7 +70,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link" href="#!">
+								<a class="mobile-menu__link" href="./addresses.html">
 									Адреса
 								</a>
 							</li>
@@ -80,7 +80,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link mobile-menu__link--color-green" href="#!">
+								<a class="mobile-menu__link mobile-menu__link--color-green" href="./offers.html">
 									Спецпредложения
 								</a>
 							</li>
@@ -230,7 +230,7 @@
 			</div>
 		</section>
 
-		<section class="possobilities section" aria-labelledby="possobilities-title">
+		<section class="possobilities section">
 			<h2 class="visually-hidden">Возможности для корпоративных клиентов 2АТМ</h2>
 
 			<div class="possobilities__slider possobilities__slider--small-max-width">
@@ -662,7 +662,7 @@
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Cпецпредложения</a>
+						<a class="footer__links-link" href="./offers.html">Cпецпредложения</a>
 					</li>
 
 					<li>
