--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link header-top-menu__link--color-green" href="#!">
+					<a class="header-top-menu__link header-top-menu__link--color-green" href="./offers.html">
 						Спецпредложения
 					</a>
 				</li>
@@ -70,7 +70,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link" href="#!">
+								<a class="mobile-menu__link" href="./addresses.html">
 									Адреса
 								</a>
 							</li>
@@ -80,7 +80,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="mobile-menu__link mobile-menu__link--color-green" href="#!">
+								<a class="mobile-menu__link mobile-menu__link--color-green" href="./offers.html">
 									Спецпредложения
 								</a>
 							</li>
@@ -1866,7 +1866,7 @@
 
 				<div class="footer__heading-text">
 					<p>
-						Сеть шиномонтажей, автомоек и&nbsp;автосервисов  с&nbsp;качественным обслуживанием в&nbsp;Санкт-Петербурге
+						Сеть шиномонтажей, автомоек и&nbsp;автосервисов с&nbsp;качественным обслуживанием в&nbsp;Санкт-Петербурге
 					</p>
 				</div>
 			</div>
@@ -1898,7 +1898,7 @@
 					</li>
 
 					<li>
-						<a class="footer__links-link" href="#!">Cпецпредложения</a>
+						<a class="footer__links-link" href="./offers.html">Cпецпредложения</a>
 					</li>
 
 					<li>
