--- a/corporate.html
+++ b/corporate.html
@@ -184,7 +184,7 @@
 					</li>
 
 					<li class="page-heading__breadcrumbs-item">
-						<a class="page-heading__breadcrumbs-link" href="./addresses.html" tabindex="-1">
+						<a class="page-heading__breadcrumbs-link" href="./corporate.html" tabindex="-1">
 							Корпоративным клиентам
 						</a>
 					</li>
