--- a/index.html
+++ b/index.html
@@ -1494,37 +1494,44 @@
 			</h2>
 
 			<div class="our-clients__slider">
-				<div class="swiper-wrapper">
-					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="AN-SECURITY DIRECT">
-						<img class="our-clients__image" src="./images/our-clients/our-client-1.webp" width="190" height="115"
-							alt="an-secuity direct" loading="lazy">
-					</a>
-
-					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="STÄUBLI">
-						<img class="our-clients__image" src="./images/our-clients/our-client-2.webp" width="190" height="115"
-							alt="StÄubli" loading="lazy">
-					</a>
-
-					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="StarLine">
-						<img class="our-clients__image" src="./images/our-clients/our-client-3.webp" width="190" height="115"
-							alt="Starline" loading="lazy">
-					</a>
-
-					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="UniRent">
-						<img class="our-clients__image" src="./images/our-clients/our-client-4.webp" width="190" height="115"
-							alt="Unirent" loading="lazy">
-					</a>
-
-					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="ТИТАН">
-						<img class="our-clients__image" src="./images/our-clients/our-client-5.webp" width="190" height="115"
-							alt="Титан" loading="lazy">
-					</a>
-
-					<a class="our-clients__link swiper-slide" href="#!" aria-label="Клиент 2ATM" title="АТОМПРОЕКТ">
-						<img class="our-clients__image" src="./images/our-clients/our-client-6.webp" width="190" height="115"
-							alt="Атомпроект" loading="lazy">
-					</a>
-				</div>
+				<ul class="swiper-wrapper">
+					<li class="our-clients__slide swiper-slide">
+						<a class="our-clients__link" href="#!" aria-label="Клиент 2ATM" title="AN-SECURITY DIRECT">
+							<img class="our-clients__image" src="./images/our-clients/our-client-1.webp" width="190" height="115"
+								alt="an-secuity direct" loading="lazy">
+						</a>
+					</li>
+					<li class="our-clients__slide swiper-slide">
+						<a class="our-clients__link" href="#!" aria-label="Клиент 2ATM" title="STÄUBLI">
+							<img class="our-clients__image" src="./images/our-clients/our-client-2.webp" width="190" height="115"
+								alt="StÄubli" loading="lazy">
+						</a>
+					</li>
+					<li class="our-clients__slide swiper-slide">
+						<a class="our-clients__link" href="#!" aria-label="Клиент 2ATM" title="StarLine">
+							<img class="our-clients__image" src="./images/our-clients/our-client-3.webp" width="190" height="115"
+								alt="Starline" loading="lazy">
+						</a>
+					</li>
+					<li class="our-clients__slide swiper-slide">
+						<a class="our-clients__link" href="#!" aria-label="Клиент 2ATM" title="UniRent">
+							<img class="our-clients__image" src="./images/our-clients/our-client-4.webp" width="190" height="115"
+								alt="Unirent" loading="lazy">
+						</a>
+					</li>
+					<li class="our-clients__slide swiper-slide">
+						<a class="our-clients__link" href="#!" aria-label="Клиент 2ATM" title="ТИТАН">
+							<img class="our-clients__image" src="./images/our-clients/our-client-5.webp" width="190" height="115"
+								alt="Титан" loading="lazy">
+						</a>
+					</li>
+					<li class="our-clients__slide swiper-slide">
+						<a class="our-clients__link" href="#!" aria-label="Клиент 2ATM" title="АТОМПРОЕКТ">
+							<img class="our-clients__image" src="./images/our-clients/our-client-6.webp" width="190" height="115"
+								alt="Атомпроект" loading="lazy">
+						</a>
+					</li>
+				</ul>
 			</div>
 		</section>
 
@@ -1552,7 +1559,7 @@
 					</li>
 
 					<li class="swiper-slide advantage-card">
-						<img class="advantage-card__image" src="./images/advantages/car-over-hand.webp" width="60" height="60"
+						<img class="advantage-card__image" src="./images/icons/icon-car-over-hand.webp" width="60" height="60"
 							alt="Машина на руке" loading="lazy">
 
 						<h3 class="advantage-card__heading">
