added rental-develop page. section about-gallery

--- a/rental-develop.html
+++ b/rental-develop.html
@@ -9,8 +9,8 @@
 	<link rel="icon" type="image/svg+xml" sizes="32x32" href="./images/icons/favicon.svg">
 	<link rel="icon" type="image/svg+xml" sizes="48x48" href="./images/icons/favicon.svg">
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/icons/favicon.svg">
-	<!-- <meta name="description"
-		content=""> -->
+	<meta name="description"
+		content="Сдайте помещение в аренду надежному арендатору. «2АТМ» — стабильная сеть шиномонтажей. Мы берем ремонт и обустройство на себя. Гарантируем долгосрочную аренду и своевременную оплату. Рассмотрим ваше предложение.">
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
 	<title>2ATM | Аренда и развитие</title>
 	<link rel="stylesheet" href="./styles/pages/rental-develop/rental-develop.css">
@@ -439,8 +439,6 @@
 			</div>
 		</section>
 
-
-
 		<section class="our-clients section container" aria-labelledby="our-clients-title">
 			<h2 class="section__title h3" id="our-clients-title">
 				Наши клиенты
@@ -530,84 +528,137 @@
 					</p>
 				</div>
 
-				<a class="about-description__button button button--accent-bg" href="tel:78123855054" target="_blank">
+				<a class="about-description__button button button--medium-padding button--accent-bg" href="tel:78123855054"
+					target="_blank">
 					Связаться с&nbsp;нами
 				</a>
 			</div>
 		</section>
 
-
-		<!-- <section class="advantages section section--big-to-medium-margin container" aria-labelledby="advantages-title">
-			<h2 class="section__title h3" id="advantages-title">
+		<section class="advantages section section--static-margin container" aria-labelledby="advantages-title">
+			<h2 class="advantages__title section__title h3" id="advantages-title">
 				Наши преимущества
 			</h2>
 
 			<div class="advantages__slider">
 				<ul class="swiper-wrapper advantages__slider-wrapper">
 					<li class="swiper-slide advantage-card">
-						<img class="advantage-card__image" src="./images/advantages/marker.webp" width="60" height="60"
-							alt="Иконка отметки на карте" loading="lazy">
+						<img class="advantage-card__image" src="./images/icons/icon-shield.webp" width="60" height="60"
+							alt="Иконка-щит" loading="lazy">
 
 						<h3 class="advantage-card__heading">
-							Расположение
+							Надёжные и долгосрочные арендаторы
 						</h3>
 
 						<div class="advantage-card__text">
 							<p>
-								Сеть наших шиномонтажей и&nbsp;мастерских расположена по&nbsp;всему городу и&nbsp;имеет удобные заезды,
-								парковку и&nbsp;зоны ожидания
+								Мы&nbsp;работаем стабильно, без сезонных простоев, и&nbsp;заинтересованы в&nbsp;долгосрочной аренде
+								с&nbsp;своевременной оплатой.
 							</p>
 						</div>
 					</li>
 
 					<li class="swiper-slide advantage-card">
-						<img class="advantage-card__image" src="./images/advantages/price-tag.webp" width="60" height="60"
+						<img class="advantage-card__image" src="./images/icons/icon-ruble.webp" width="60" height="60"
 							alt="Иконка с валютой" loading="lazy">
 
 						<h3 class="advantage-card__heading">
-							Приятная цена
+							Минимум ремонтных затрат для вас
 						</h3>
 
 						<div class="advantage-card__text">
 							<p>
-								Прозрачные цены без скрытых платежей. Первоклассный сервис по&nbsp;выгодным ценам.
+								Нам не&nbsp;нужен дорогой ремонт&nbsp;&mdash; достаточно водоснабжения, канализации и&nbsp;ровного пола.
+								Остальную инфраструктуру создаём сами.
 							</p>
 						</div>
 					</li>
 
 					<li class="swiper-slide advantage-card">
-						<img class="advantage-card__image" src="./images/advantages/clock-2.webp" width="60" height="60" alt="Часы"
-							loading="lazy">
+						<img class="advantage-card__image" src="./images/icons/icon-clock-tablet.webp" width="60" height="60"
+							alt="Часы и планшет" loading="lazy">
 
 						<h3 class="advantage-card__heading">
-							Скорость
+							Гарантированная арендная плата
 						</h3>
 
 						<div class="advantage-card__text">
 							<p>
-								Удобная запись через Telegram. Мы&nbsp;ценим ваше время и&nbsp;отдаем автомобиль точно в&nbsp;обещанное
-								время.
+								Услуги шиномонтажа востребованв круглый год, поэтому наша арендная нагрузка предсказуема, а&nbsp;ваша
+								выручка&nbsp;&mdash; стабильна.
 							</p>
 						</div>
 					</li>
 
 					<li class="swiper-slide advantage-card">
-						<img class="advantage-card__image" src="./images/icons/icon-car-over-hand.webp" width="60" height="60"
-							alt="Машина на руке" loading="lazy">
+						<img class="advantage-card__image" src="./images/icons/icon-thermometer.webp" width="60" height="60"
+							alt="Иконка градусника" loading="lazy">
 
 						<h3 class="advantage-card__heading">
-							Качество
+							Ответственное отношение к помещению
 						</h3>
 
 						<div class="advantage-card__text">
 							<p>
-								Современное оборудование и&nbsp;опытные мастера гарантируют быстрый и&nbsp;качественный сервис.
+								Соблюдаем чистоту, нормы безопасности и&nbsp;противопожарные требования. Ваша недвижимость останется
+								в&nbsp;отличном состоянии.
 							</p>
 						</div>
 					</li>
 				</ul>
 			</div>
-		</section> -->
+		</section>
+
+		<section class="about-gallery section container" aria-labelledby="about-gallery-title">
+			<h2 class="about-gallery__title section__title h3" id="about-gallery-title">
+				Дизайн-проекты наших точек
+			</h2>
+
+			<div class="about-gallery__subtitle section__subtitle">
+				<p>
+					Наши точки выглядят современно и&nbsp;аккуратно и&nbsp;не&nbsp;будут портить архитектурный ансамбль&nbsp;жилых
+					комплексов, торговых моллов или придорожных территорий.
+				</p>
+			</div>
+
+			<ul class="about-gallery__list">
+				<li class="about-gallery__list-item">
+					<picture class="about-gallery__image-wrapper">
+						<source srcset="./images/about/about-gallery-1-mobile.webp" media="(max-width: 767px) " type="image/webp">
+
+						<source srcset="./images/about/about-gallery-1.webp" type="image/webp">
+						<img class="about-gallery__image" src="./images/about/about-gallery-1-mobile.webp" alt="Жилой комплекс 2АТМ"
+							width="340" height="272" loading="lazy">
+					</picture>
+				</li>
+
+				<li class="about-gallery__list-item">
+					<picture class="about-gallery__image-wrapper about-gallery__image-wrapper--small-height">
+						<source srcset="./images/about/about-gallery-2-mobile.webp" media="(max-width: 767px) " type="image/webp">
+
+						<source srcset="./images/about/about-gallery-2.webp" type="image/webp">
+						<img class="about-gallery__image" src="./images/about/about-gallery-2-mobile.webp" alt="Жилой комплекс 2АТМ"
+							width="340" height="252" loading="lazy">
+					</picture>
+				</li>
+
+				<li class="about-gallery__list-item">
+					<picture class="about-gallery__image-wrapper about-gallery__image-wrapper--big-width">
+						<source srcset="./images/about/about-gallery-3-mobile.webp" media="(max-width: 767px) " type="image/webp">
+
+						<source srcset="./images/about/about-gallery-3.webp" type="image/webp">
+						<img class="about-gallery__image" src="./images/about/about-gallery-3-mobile.webp" alt="Жилой комплекс 2АТМ"
+							width="340" height="272" loading="lazy">
+					</picture>
+				</li>
+			</ul>
+
+			<a class="about-gallery__button button button--medium-padding button--accent-bg" href="tel:78123855054"
+				target="_blank">
+				Связаться с&nbsp;нами
+			</a>
+		</section>
+
 	</main>
 
 	<footer class="footer">
@@ -805,7 +856,6 @@
 			},
 			grabCursor: true
 		});
-
 	</script>
 
 
