--- a/addresses.html
+++ b/addresses.html
@@ -580,7 +580,7 @@
 		</section>
 
 		<section class="advantages section section--big-to-medium-margin container" aria-labelledby="advantages-title">
-			<h2 class="section__title h3" id="advantages-title">
+			<h2 class="advantages__title section__title h3" id="advantages-title">
 				Наши преимущества
 			</h2>
 
