--- a/corporate.html
+++ b/corporate.html
@@ -446,7 +446,7 @@
 
 
 		<section class="advantages section section--big-to-medium-margin container" aria-labelledby="advantages-title">
-			<h2 class="section__title h3" id="advantages-title">
+			<h2 class="advantages__title section__title h3" id="advantages-title">
 				Наши преимущества
 			</h2>
 
